crates/reinhardt-pages/tests/ui/layout/fail/mismatched_loader_data.stderr
error[E0271]: type mismatch resolving `<marker as RouteLoader>::Data == String`
 --> tests/ui/layout/fail/mismatched_loader_data.rs:8:1
  |
8 | #[layout("/projects/", name = "shell", loader = shell_loader)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<marker as RouteLoader>::Data == String`
  |
note: expected this to be `std::string::String`
 --> tests/ui/layout/fail/mismatched_loader_data.rs:4:35
  |
4 | async fn shell_loader() -> Result<u64, String> {
  |                                   ^^^
note: required by a bound in `__shell_assert_loader_data`
 --> tests/ui/layout/fail/mismatched_loader_data.rs:8:1
  |
8 | #[layout("/projects/", name = "shell", loader = shell_loader)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__shell_assert_loader_data`
9 | fn shell(Loader(data): Loader<String>, outlet: Outlet) -> Page {
  |    ----- required by a bound in this function
  = note: this error originates in the attribute macro `layout` (in Nightly builds, run with -Z macro-backtrace for more info)
